# translator

./: .gitignore  App.axaml  App.axaml.cs  Program.cs  README.md  ViewLocator.cs  app.manifest  translator.csproj
Commands/: Command.cs
Models/: Client.cs  HistoryModel.cs  LanguageManagerModel.cs  Query.cs  TranslationResponse.cs  TranslatorModel.cs
Server/: CMakeLists.txt  Example.h  Option.h  Query.cpp  Query.h  Server.cpp  Server.h  ServerConnection.cpp  ServerConnection.h  Translator.cpp  Translator.h  compile_flags.txt  main.cpp
Server/.cache/clangd/index/: Query.cpp.9AD9B0D879CF2329.idx  Query.h.A73FB91C225399F6.idx  Server.cpp.56222A91F8D12D80.idx  Server.h.0A639AD634A4E014.idx  ServerConnection.cpp.092BB2588017F05F.idx  ServerConnection.h.CBBFD192BF2C2F05.idx  Translator.cpp.46875E9E9E6DA804.idx  Translator.h.B498986DB813B906.idx  main.cpp.2BAD961B7828B1AB.idx  qexample.cpp.E08ACF2D4CF1892D.idx  qexample.h.082E34B7A0F0C07B.idx  qonlinetranslator.cpp.188C75E64DA4FE41.idx  qonlinetranslator.h.3D192BEFAF93ADC9.idx  qonlinetts.cpp.C42023BAE997AA65.idx  qonlinetts.h.B3703164185A6AFF.idx  qoption.cpp.BD61EE1A2F080AE5.idx  qoption.h.4482BB94B60993F7.idx  server.cpp.1120EDDCD3D4E6AE.idx
Server/History/: CMakeLists.txt  Engine.cpp  Engine.h  History.cpp  History.h  Language.cpp  Language.h  Table.h  Translation.cpp  Translation.h  compile_flags.txt  history.cpp  history.h
Server/History/Tables/: Engine.cpp  Engine.h  History.cpp  History.h  Language.cpp  Language.h  Table.h  Translation.cpp  Translation.h
Server/History/Tables/Example/: Example.cpp  Example.h  ExampleType.cpp  ExampleType.h
Server/History/Tables/Option/: Option.cpp  Option.h  OptionTranslations.cpp  OptionTranslations.h  OptionType.cpp  OptionType.h
ViewModels/: HistoryViewModel.cs  LanguageSelectionViewModel.cs  LanguagesViewModel.cs  MainWindowViewModel.cs  OutputPromptViewModel.cs  PromptsViewModel.cs  SettingsViewModel.cs  ViewModelBase.cs
Views/: HistoryView.axaml  HistoryView.axaml.cs  LanguageSelectionView.axaml  LanguageSelectionView.axaml.cs  LanguagesView.axaml  LanguagesView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  OutputPrompt.axaml  (+5 more)
(+17 files in other folders)
